# ds4cc-marketplace

./: .dockerignore  .gitignore  .nojekyll  CHANGELOG.md  CNAME  CURATION.md  GROK_PASTE.md  HIGHLIGHTS.md  README.md  agent-browser.json  almanack  chatgpt-app-submission.json  deploy-github-pages.sh  grok  index.html  install.sh  kimi.plugin.json  render.yaml  the-musketeer.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.crush-plugin/: marketplace.json
.github/plugin/: marketplace.json
.github/workflows/: apps-sdk.yml  pages.yml
.grok-plugin/: marketplace.json  plugin-index.json
.kimi-plugin/: marketplace.json
agents/: critic.md  labrat.md  reviewer.md  scout.md  scribe.md  sentinel.md
apps-sdk/: Dockerfile  README.md  SUBMISSION.md  package-lock.json  package.json
apps-sdk/assets/: ds4cc-demo.webm
apps-sdk/src/: catalog.ts  server.test.ts  server.ts  widget.ts
docs/plans/: the-kimester-r1-connector.md  the-kimester-r1-critic.md  (+5 more)
marketplace/: marketplace.json
marketplace/validator/: Cargo.toml  README.md
marketplace/validator/src/: lib.rs  main.rs
marketplace/validator/tests/: integration_test.rs
scripts/: build-crush-marketplace.py  build-ds4cc-submission.py  build-kimi-marketplace.py  check-opencode-install.mjs  install-automation-chrome  install-opencode-agents.mjs  setup-grok-build  smoke-deployment.mjs  smoke-deployment.sh  validate-agent-payloads.mjs
tests/: test-install-automation-chrome.sh  test_build_crush_marketplace.py  test_build_ds4cc_submission.py  test_build_kimi_marketplace.py
(+251 files in other folders)
